<?xml version="1.0"?>
<!--
  Copyright 2016 The Cartographer Authors

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<package format="2">
  <name>cartographer_ros</name>
  <version>0.2.0</version>
  <description>
    Cartographer is a system that provides real-time simultaneous localization
    and mapping (SLAM) in 2D and 3D across multiple platforms and sensor
    configurations. This package provides Cartographer's ROS integration.
  </description>
  <maintainer email="google-cartographer@googlegroups.com">
    The Cartographer Authors
  </maintainer>
  <license>Apache 2.0</license>

  <url>https://github.com/googlecartographer/cartographer_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>google-mock</build_depend>
  <build_depend>g++-static</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <build_depend>python-sphinx</build_depend>

  <build_depend>cartographer</build_depend>
  <build_depend>cartographer_ros_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>libgflags-dev</build_depend>
  <build_depend>libgoogle-glog-dev</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>cartographer_ros_msgs</exec_depend>
  <exec_depend>console_bridge</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
