<?xml version="1.0"?>
<package format="3">

  <name>localization_msgs</name>
  <version>1.0.0</version>
  <description>
    ROS message definitions for Localization data.
  </description>
  <maintainer email="Dennis.Young@asirobots.com">Dennis Young</maintainer>

  <license>ASI</license>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
